Fix styling and focus issues on ios chrome/safari

--- a/private/react/Game.scss
+++ b/private/react/Game.scss
@@ -85,13 +85,13 @@ div.clue-wrapper {
   img {
     max-width: 100%;
     max-height: 100%;
+    margin: auto;
   }
 }
 .splash-img-div {
   display: flex;
   align-items: center;
   height: 50vh;
-  margin: auto;
 }
 .splash-btns {
   display: flex;
@@ -119,6 +119,7 @@ div.clue-wrapper {
       font-size: 4vh;
     }
     input.room-id-input {
+      -webkit-user-select: text; /* Chrome/Safari/Opera */
       padding: 0;
       font-weight: bold;
       font-family: arial;
@@ -132,7 +133,7 @@ div.clue-wrapper {
     }
   }
 div.room-id-container {
-  flex-direction: column;
+  margin: auto;
   div.room-id {
     font-weight: bold;
     font-family: arial;
@@ -218,4 +219,13 @@ div.room-id-container {
   border-left-color: #c2e1f5;
   border-width: 36px;
   margin-top: -36px;
+}
+span, div {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Chrome/Safari/Opera */
+  -khtml-user-select: none; /* Konqueror */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+                        not supported by any browser */
 }
